# lyrics-extractor

./: .gitignore  README.md  deduplicate.py  pyproject.toml
.github/workflows/: python-ci.yml
lyrics_extractor/: __init__.py  __main__.py  constants.py  lyrics.py  moody_lyrics.py  nju_music_mood.py  util.py
lyrics_extractor/deprecated/initial_approach/: __main__.py  dataset.py  lyrics.py  spotify.py
lyrics_extractor/deprecated/initial_approach/entrypoints/: __init__.py  original_approach.py  simplified_approach.py  test.py
lyrics_extractor/deprecated/legacy/: initial_approach.py
tests/: test_utils.py
